--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,12 @@
-<!-- <app-header></app-header>
+<app-header></app-header>
 <router-outlet></router-outlet>
- -->
 
-<h1>{{ interval$ | async }}</h1>
+<!-- <h1>{{ interval$ | async }}</h1> -->
+
+
+
+
+
+
+
+
