--- a/src/app/landing-page/components/landing-page/landing-page.component.html
+++ b/src/app/landing-page/components/landing-page/landing-page.component.html
@@ -5,7 +5,7 @@
 <!--    <button type="submit">OK!</button>-->
 <!--  </form>-->
 
-    <img src="assets/logo_snapface.png" alt="Snapface logo">
+    <img src="../../../../assets/logo_snapface.png" alt="Snapface logo">
     <div class="landing-links">
       <button (click)="onContinue()">Continuer vers Snapface</button>
     </div>
